--- a/src/app/components/home/profile/profile.component.html
+++ b/src/app/components/home/profile/profile.component.html
@@ -1,1 +1,120 @@
-<p>profile works!</p>
+<mat-card>
+    <app-header></app-header>
+</mat-card>
+
+<div class="gris">
+    <div fxLayout="row" fxLayout.lt-md="column" style="padding: 24px;">
+        <mat-card fxFlex="25" style="height: 80vh;">
+            <mat-list>
+                <mat-list-item>
+                    <button mat-button>Mi cuenta</button>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item>
+                    <button mat-button>Libreta de direcciones</button>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item>
+                    <button mat-button>KMS Lleva</button>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item>
+                    <button mat-button>Recomienda y gana</button>
+                </mat-list-item>
+                <!-- <mat-divider></mat-divider> -->
+            </mat-list>
+        </mat-card>
+
+        <mat-card fxFlex="75" style="margin-left: 15px;">
+            <div fxFlex="15" fxFlex.lt-md style="margin: 25px;">
+                <img src="assets/perfil/photo.png">
+                <br>
+                <br>
+                <img src="assets/perfil/change.png">
+            </div>
+
+            <div fxFlex="85" fxFlex.lt-md style="margin: 35px 20px;">
+                <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
+                    <div fxLayout="column" fxLayoutGap="20px">
+
+
+                        <div fxLayout="row wrap" style="width: 90% !important;">
+
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Nombre completo</mat-label>
+                                    <input matInput placeholder="Nombre completo" required>
+                                </mat-form-field>
+                            </div>
+
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Ciudad</mat-label>
+                                    <mat-select>
+                                        <mat-option>
+                                            Barranquilla
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <div fxFlex="30" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Tipo Doc</mat-label>
+                                        <select matNativeControl required>
+                                <option value="CC">CC</option>
+                                <option value="CE">CE</option>
+                                <option value="PA">PA</option>
+                                <option value="RC">RC</option>
+                                <option value="TI">TI</option>
+                              </select>
+                                    </mat-form-field>
+                                </div>
+                                <div style="padding-left: 10px;" fxFlex="70" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Número de documento</mat-label>
+                                        <input matInput type="number" placeholder="000000" required>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Correo electronico</mat-label>
+                                    <input matInput type="email" placeholder="nombre@email.com" required>
+                                </mat-form-field>
+                            </div>
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Celular</mat-label>
+                                    <input matInput type="email" placeholder="nombre@email.com" required>
+                                </mat-form-field>
+                            </div>
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Codigo Insertado</mat-label>
+                                    <input matInput type="email" placeholder="nombre@email.com" required>
+                                </mat-form-field>
+                            </div>
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <div class="padd" fxFlex="50" fxFlex.lt-md>
+                                    <img src="../../../assets/perfil/update.png">
+                                </div>
+                            </div>
+
+                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                <div class="padd" fxFlex="50" fxFlex.lt-md>
+                                    <img src="../../../assets/perfil/convertir.png">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </mat-card>
+    </div>
+</div>
