--- a/src/app/components/home/profile/profile.component.html
+++ b/src/app/components/home/profile/profile.component.html
@@ -7,113 +7,180 @@
         <mat-card fxFlex="25" style="height: 80vh;">
             <mat-list>
                 <mat-list-item>
-                    <button mat-button>Mi cuenta</button>
+                    <button mat-button class="option active" id="cuenta" (click)="option('cuenta')">Mi cuenta</button>
                 </mat-list-item>
                 <mat-divider></mat-divider>
                 <mat-list-item>
-                    <button mat-button>Libreta de direcciones</button>
+                    <button mat-button class="option" id="direccion" (click)="option('direccion')">Libreta de direcciones</button>
                 </mat-list-item>
                 <mat-divider></mat-divider>
                 <mat-list-item>
-                    <button mat-button>KMS Lleva</button>
+                    <button mat-button class="option" id="kms" (click)="option('kms')">KMS Lleva</button>
                 </mat-list-item>
                 <mat-divider></mat-divider>
                 <mat-list-item>
-                    <button mat-button>Recomienda y gana</button>
+                    <button mat-button class="option" id="recomienda" (click)="option('recomienda')">Recomienda y gana</button>
                 </mat-list-item>
                 <!-- <mat-divider></mat-divider> -->
             </mat-list>
         </mat-card>
 
         <mat-card fxFlex="75" style="margin-left: 15px;">
-            <div fxFlex="15" fxFlex.lt-md style="margin: 25px;">
-                <img src="assets/perfil/photo.png">
-                <br>
-                <br>
-                <img src="assets/perfil/change.png">
+            <div class="form-cuenta" id="form-cuenta">
+                <div fxFlex="15" fxFlex.lt-md style="margin: 25px;">
+                    <img src="assets/perfil/photo.png">
+                    <br>
+                    <br>
+                    <button (click)="cambiarClave()" class="btn-cambiar">
+                            <img src="assets/perfil/change.png">
+                        </button>
+                </div>
+
+                <div fxFlex="85" fxFlex.lt-md style="margin: 35px 20px;">
+                    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
+                        <div fxLayout="column" fxLayoutGap="20px">
+
+                            <div fxLayout="row wrap" style="width: 90% !important;">
+
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Nombre completo</mat-label>
+                                        <input matInput placeholder="Nombre completo" required>
+                                    </mat-form-field>
+                                </div>
+
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Ciudad</mat-label>
+                                        <mat-select>
+                                            <mat-option>
+                                                Barranquilla
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <div fxFlex="30" fxFlex.lt-md>
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Tipo Doc</mat-label>
+                                            <select matNativeControl required>
+                                        <option value="CC">CC</option>
+                                        <option value="CE">CE</option>
+                                        <option value="PA">PA</option>
+                                        <option value="RC">RC</option>
+                                        <option value="TI">TI</option>
+                                      </select>
+                                        </mat-form-field>
+                                    </div>
+                                    <div style="padding-left: 10px;" fxFlex="70" fxFlex.lt-md>
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Número de documento</mat-label>
+                                            <input matInput type="number" placeholder="000000" required>
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Correo electronico</mat-label>
+                                        <input matInput type="email" placeholder="nombre@email.com" required>
+                                    </mat-form-field>
+                                </div>
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Celular</mat-label>
+                                        <input matInput type="email" placeholder="nombre@email.com" required>
+                                    </mat-form-field>
+                                </div>
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <mat-form-field appearance="outline">
+                                        <mat-label>Codigo Insertado</mat-label>
+                                        <input matInput type="email" placeholder="nombre@email.com" required>
+                                    </mat-form-field>
+                                </div>
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <div class="padd" fxFlex="50" fxFlex.lt-md>
+                                        <button (click)="actualizar()">
+                                                <img src="../../../assets/perfil/update.png">
+                                            </button>
+                                    </div>
+                                </div>
+
+                                <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
+                                    <div class="padd" fxFlex="50" fxFlex.lt-md>
+                                        <button (click)="convertirEmpresa()">
+                                                <img src="../../../assets/perfil/convertir.png">
+                                            </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div fxFlex="85" fxFlex.lt-md style="margin: 35px 20px;">
-                <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
-                    <div fxLayout="column" fxLayoutGap="20px">
+            <div class="form-direccion" id="form-direccion">
+                <div fxFlex="100" fxFlex.lt-md style="margin: 35px 20px;">
+                    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
+                        <div fxLayout="column" fxLayoutGap="20px" style="width: 60%; margin: auto;">
 
-
-                        <div fxLayout="row wrap" style="width: 90% !important;">
-
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <mat-form-field appearance="outline">
-                                    <mat-label>Nombre completo</mat-label>
-                                    <input matInput placeholder="Nombre completo" required>
-                                </mat-form-field>
+                            <div fxLayout="row wrap" style="width: 100% !important;">
+                                <p style="margin: auto;
+                                font-size: 30px; color: rgb(47, 132, 87);">Libreta de direcciones</p>
                             </div>
 
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <mat-form-field appearance="outline">
-                                    <mat-label>Ciudad</mat-label>
-                                    <mat-select>
-                                        <mat-option>
-                                            Barranquilla
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
+                            <div fxLayout="row wrap" style="width: 100% !important;">
+                                <mat-list style="width: 100%;">
+                                    <mat-list-item>
+                                        <img src="../../../../assets/perfil/location.png" alt="" class="location">
+                                        <label style="font-size: 15px;"><b>Oficina - </b> Carrera 66 #55-44 Bancolombia</label>
+                                        <button class="delete" (click)="eliminarDireccion()">
+                                            <img src="../../../../assets/perfil/borrardir.png" alt="">
+                                        </button>
+                                    </mat-list-item>
+                                    <mat-divider style="width: 100% !important;"></mat-divider>
+                                    <mat-list-item>
+                                        <img src="../../../../assets/perfil/location.png" alt="" class="location">
+                                        <label style="font-size: 15px;"><b>Oficina - </b> Carrera 66 #55-44 Bancolombia</label>
+                                        <button class="delete" (click)="eliminarDireccion()">
+                                            <img src="../../../../assets/perfil/borrardir.png" alt="">
+                                        </button>
+                                    </mat-list-item>
+                                    <mat-divider style="width: 100% !important;"></mat-divider>
+                                    <mat-list-item>
+                                        <img src="../../../../assets/perfil/location.png" alt="" class="location">
+                                        <label style="font-size: 15px;"><b>Oficina - </b> Carrera 66 #55-44 Bancolombia</label>
+                                        <button class="delete" (click)="eliminarDireccion()">
+                                            <img src="../../../../assets/perfil/borrardir.png" alt="">
+                                        </button>
+                                    </mat-list-item>
+                                    <mat-divider style="width: 100% !important;"></mat-divider>
+                                    <mat-list-item>
+                                        <img src="../../../../assets/perfil/location.png" alt="" class="location">
+                                        <label style="font-size: 15px;"><b>Oficina - </b> Carrera 66 #55-44 Bancolombia</label>
+                                        <button class="delete" (click)="eliminarDireccion()">
+                                            <img src="../../../../assets/perfil/borrardir.png" alt="">
+                                        </button>
+                                    </mat-list-item>
+                                    <!-- <mat-divider></mat-divider> -->
+                                </mat-list>
+                                <button (click)="agregarDireccion()" style="margin: 15px auto;">
+                                    <img src="../../../../assets/perfil/nuevadir.png" alt="">
+                                </button>
                             </div>
 
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <div fxFlex="30" fxFlex.lt-md>
-                                    <mat-form-field appearance="outline">
-                                        <mat-label>Tipo Doc</mat-label>
-                                        <select matNativeControl required>
-                                <option value="CC">CC</option>
-                                <option value="CE">CE</option>
-                                <option value="PA">PA</option>
-                                <option value="RC">RC</option>
-                                <option value="TI">TI</option>
-                              </select>
-                                    </mat-form-field>
-                                </div>
-                                <div style="padding-left: 10px;" fxFlex="70" fxFlex.lt-md>
-                                    <mat-form-field appearance="outline">
-                                        <mat-label>Número de documento</mat-label>
-                                        <input matInput type="number" placeholder="000000" required>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <mat-form-field appearance="outline">
-                                    <mat-label>Correo electronico</mat-label>
-                                    <input matInput type="email" placeholder="nombre@email.com" required>
-                                </mat-form-field>
-                            </div>
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <mat-form-field appearance="outline">
-                                    <mat-label>Celular</mat-label>
-                                    <input matInput type="email" placeholder="nombre@email.com" required>
-                                </mat-form-field>
-                            </div>
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <mat-form-field appearance="outline">
-                                    <mat-label>Codigo Insertado</mat-label>
-                                    <input matInput type="email" placeholder="nombre@email.com" required>
-                                </mat-form-field>
-                            </div>
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <div class="padd" fxFlex="50" fxFlex.lt-md>
-                                    <img src="../../../assets/perfil/update.png">
-                                </div>
-                            </div>
-
-                            <div style="padding: 10px;" fxFlex="50" fxFlex.lt-md>
-                                <div class="padd" fxFlex="50" fxFlex.lt-md>
-                                    <img src="../../../assets/perfil/convertir.png">
-                                </div>
-                            </div>
                         </div>
-
                     </div>
-
-
-
                 </div>
+            </div>
+
+            <div class="form-kms" id="form-kms">
+                KMS
+            </div>
+
+            <div class="form-recomienda" id="form-recomienda">
+                Recomienda
             </div>
         </mat-card>
     </div>
