--- a/src/app/components/home/profile/profile.component.css
+++ b/src/app/components/home/profile/profile.component.css
@@ -37,3 +37,71 @@ button {
     right: 0;
     margin-right: 10px;
 }
+
+.title-beneficios {
+    width: 100%;
+    text-align: center;
+    color: rgb(47, 132, 87);
+    font-size: 16px;
+}
+
+::ng-deep.mat-tab-label,
+ ::ng-deep.mat-tab-label-active {
+    min-width: 0!important;
+    width: 100%;
+}
+
+::ng-deep.mat-ink-bar {
+    background: rgb(47, 132, 87) !important;
+}
+
+::ng-deep.mat-tab-body {
+    margin-top: 10px;
+    background: #eee !important;
+    padding: 10px;
+}
+
+h4 {
+    color: rgb(47, 132, 87);
+    font-size: 23px;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.copy-codigo {
+    margin: auto;
+    margin-top: auto;
+    width: 200px;
+    border: 1px solid #eee;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: -20px;
+    position: relative;
+    height: 23px;
+    cursor: pointer;
+}
+
+.copy-codigo label {
+    font-size: 24px;
+    font-weight: initial;
+    cursor: pointer;
+}
+
+.fondo {
+    position: absolute;
+    right: 6px;
+    top: 6px;
+    width: 32px;
+    height: 32px;
+    background: #eee;
+    border-radius: 19px;
+    text-align: center;
+}
+
+.msj-copy {
+    display: none;
+    text-align: center;
+    margin-top: 5px;
+    color: rgb(47, 132, 87);
+    font-size: 12px;
+}
