cambios en pantallas adicionales

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,19 +1,32 @@
 .mat-expansion-panel-body {
-  padding: 0 15px 16px !important;
+    padding: 0 15px 16px !important;
 }
+
 .imagenFondo {
-  position: relative;
-  width: 10px; /* ancho de la imagen OPCIONAL */
-  height: 10px; /* largo de la imagen OPCIONAL */
+    position: relative;
+    width: 10px;
+    /* ancho de la imagen OPCIONAL */
+    height: 10px;
+    /* largo de la imagen OPCIONAL */
 }
+
 .imagenFondo span {
-  position: absolute;
-  left: 0;
+    position: absolute;
+    left: 0;
 }
+
 agm-map {
-  width: 500px;
-  height: 200px;
+    width: 500px;
+    height: 200px;
 }
-.mat-h3, .mat-subheading-2, .mat-typography h3 {
-  margin: 0 0 7px !important;
+
+.mat-h3,
+.mat-subheading-2,
+.mat-typography h3 {
+    margin: 0 0 7px !important;
+}
+
+button {
+    background: transparent;
+    border: 0;
 }
