--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -141,7 +141,9 @@
                             </mat-form-field>
                         </div>
                         <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
-                            <img src="../../../assets/home/carga.png" style="width: 100%">
+                            <button (click)="cargaMasiva()">
+                                <img src="../../../assets/home/carga.png" style="width: 100%">
+                            </button>
                         </div>
                         <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
                             <!-- <img src="../../../assets/home/confirmar.png" (click)="solicitar()" style="padding-left: 10px;width: 100%"> -->
