--- a/src/app/components/register-aliado/register-aliado.component.html
+++ b/src/app/components/register-aliado/register-aliado.component.html
@@ -1,70 +1,58 @@
 <div class="background">
-  <div style="padding-top: 11%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
-    <img src="../../../assets/login/lleva.png" height="0.5%" width="9%">
-  </div>
-
-  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-
-
-    <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 50% !important;">
-
-      <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
-        <h1  class="titles" style="display: inline">Bienvenido al registro de </h1>
-        <h1 class="titles" style="display: inline;   font-weight: bold;"> Aliados Lleva</h1>
-      </div>
-<br>
-      <div  fxFlex="100" fxFlex.lt-md>
-
-        <p style="text-align: center; color: #707070">Lleva es una plataforma digital que te brindará la posibilidad de aumentar tus ingresos. Obtener
-        una cuenta es completamente gratis, sólo deberás asegurarte de cumplir con todos los requisitos:</p>
-
-      </div>
-
-
-      <div  fxFlex="100" fxFlex.lt-md>
-
-        <mat-list role="list">
-          <mat-list-item role="listitem">Ser mayor de 18 años</mat-list-item>
-          <mat-list-item role="listitem">Contar con vehículo</mat-list-item>
-          <mat-list-item role="listitem">Tener buenas aptitudes para conducir en todo tipo de carreteras y en toda clase de condiciones climáticas</mat-list-item>
-          <mat-list-item role="listitem">No contar con asuntos pendientes con las autoridades judiciales</mat-list-item>
-          <mat-list-item role="listitem">Ser formal en el trato hacia los demás y digno de confianza</mat-list-item>
-          <mat-list-item role="listitem">Ser capaz de llevar a cabo reparaciones sencillas en su propio vehículo</mat-list-item>
-          <mat-list-item role="listitem">Conocer las calles, direcciones y zonas de la ciudad en que laborará</mat-list-item>
-          <mat-list-item role="listitem">Capaz de mantener información confidencial</mat-list-item>
-          <mat-list-item role="listitem">Capaz de seguir instrucciones</mat-list-item>
-          <mat-list-item role="listitem">Capaz de trabajar con vencimientos</mat-list-item>
-          <mat-list-item role="listitem">Capaz de trabajar sin supervisión</mat-list-item>
-          <mat-list-item role="listitem">Habilidades comunicativas y sociales</mat-list-item>
-          <mat-list-item role="listitem">Permiso de conducir vigente y completo (si aplica)</mat-list-item>
-          <mat-list-item role="listitem">Documentos del vehículo al día (si aplica)</mat-list-item>
-
-        </mat-list>
-      </div>
-
-      <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
-        <p  class="titles" >Documentos que debes tener a la mano a la hora de registrarte en Lleva: </p>
-      </div>
-      <div  fxLayoutAlign="left" fxFlex="100" fxFlex.lt-md>
-
-        <mat-list role="list">
-          <mat-list-item role="listitem">Copia de cédula de ciudadanía por ambas caras</mat-list-item>
-          <mat-list-item role="listitem">Acreditar documentos de permanencia (si aplica)</mat-list-item>
-          <mat-list-item role="listitem">Copia de licencia de conducción (si aplica)</mat-list-item>
-          <mat-list-item role="listitem">Copia de tarjeta de propiedad (si aplica)</mat-list-item>
-          <mat-list-item role="listitem">Copia de SOAT vigente (si aplica)</mat-list-item>
-          <mat-list-item role="listitem">Fotografía reciente del aliado</mat-list-item>
-          <mat-list-item role="listitem">Fotografía del vehículo donde se evidencie la placa (si aplica)</mat-list-item>
-
-        </mat-list>
-      </div>
-      <div class="padd contenedor" fxFlex="50" fxFlex.lt-md >
-        <img src="../../../assets/aliado/continuar.png"  routerLink="/registro">
-
-      </div>
+    <div style="padding-top: 11%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
+        <img src="../../../assets/login/lleva.png" height="0.5%" width="9%">
     </div>
 
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
 
 
-  </div>
+        <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 50% !important;">
+
+            <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
+                <h1 class="titles" style="display: inline">Bienvenido al registro de </h1>
+                <h1 class="titles" style="display: inline;   font-weight: bold;"> Aliados Lleva</h1>
+            </div>
+            <br>
+            <div fxFlex="100" fxFlex.lt-md>
+
+                <p style="text-align: center; color: #707070">Lleva es una plataforma digital que te brindará la posibilidad de aumentar tus ingresos. Obtener una cuenta es completamente gratis, sólo deberás asegurarte de cumplir con todos los requisitos:</p>
+                <mat-list role="list">
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Ser mayor de 18 años</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Contar con vehículo</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Tener buenas aptitudes para conducir en todo tipo de carreteras y en toda clase de condiciones climáticas</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>No contar con asuntos pendientes con las autoridades judiciales</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Ser formal en el trato hacia los demás y digno de confianza</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Ser capaz de llevar a cabo reparaciones sencillas en su propio vehículo</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Conocer las calles, direcciones y zonas de la ciudad en que laborará</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Capaz de mantener información confidencial</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Capaz de seguir instrucciones</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Capaz de trabajar con vencimientos</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Capaz de trabajar sin supervisión</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Habilidades comunicativas y sociales</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Permiso de conducir vigente y completo (si aplica)</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Documentos del vehículo al día (si aplica)</mat-list-item>
+
+                </mat-list>
+                <p class="titles" style="width: 100%;">Documentos que debes tener a la mano a la hora de registrarte en Lleva: </p>
+                <mat-list role="list">
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Copia de cédula de ciudadanía por ambas caras</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Acreditar documentos de permanencia (si aplica)</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Copia de licencia de conducción (si aplica)</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Copia de tarjeta de propiedad (si aplica)</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Copia de SOAT vigente (si aplica)</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Fotografía reciente del aliado</mat-list-item>
+                    <mat-list-item role="listitem"><span><label>✓</label></span>Fotografía del vehículo donde se evidencie la placa (si aplica)</mat-list-item>
+
+                </mat-list>
+
+            </div>
+            <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
+                <img src="../../../assets/aliado/continuar.png" routerLink="/registro">
+
+            </div>
+        </div>
+
+
+
+    </div>
 </div>
