--- a/src/app/components/home/profile/profile.component.html
+++ b/src/app/components/home/profile/profile.component.html
@@ -228,7 +228,7 @@
                                 <div fxFlex="100" fxFlex.lt-md style="margin: 25px;">
 
                                     <h4>Recomiéndanos y gana <b>Beneficios</b></h4>
-                                    <p>Invita a tus amigos a utilizar nuestra app y por cada uno que ingrese con tu código recibirás beneficios en tus servicios.</p>
+                                    <p style="text-align: center;">Invita a tus amigos a utilizar nuestra app y por cada uno que ingrese con tu código recibirás beneficios en tus servicios.</p>
                                 </div>
                             </div>
 
