cambios en billetera

--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -14,7 +14,7 @@
       <mat-icon>more_vert</mat-icon>
     </button>
         <mat-menu #menu="matMenu" style="display: inline">
-            <button mat-menu-item style="display: inline">
+            <button mat-menu-item style="display: inline" routerLink="/perfil">
         <span>Mi cuenta</span>
       </button>
             <mat-divider></mat-divider>
@@ -22,7 +22,7 @@
         <span>Historial de servicio</span>
       </button>
             <mat-divider></mat-divider>
-            <button mat-menu-item>
+            <button mat-menu-item routerLink="/billetera">
         <span>Billetera virtual</span>
       </button>
             <mat-divider></mat-divider>
