--- a/src/app/components/register-aliado/register-photos/register-photos.component.html
+++ b/src/app/components/register-aliado/register-photos/register-photos.component.html
@@ -12,7 +12,7 @@
                 <p class="titles">Algunos campos son obligatorios.</p>
             </div>
             <br>
-            <div fxFlex="100" fxFlex.lt-md style="width: 60% !important;">
+            <div fxFlex="100" fxFlex.lt-md style="width: 60% !important; text-align: center;">
                 <mat-list role="list">
                     <mat-list-item role="listitem" routerLink="/cargar-documento">
                         <h3>Documento de identificación</h3>
@@ -56,10 +56,9 @@
                         <img src="../../../../assets/register/arrow.png">
                     </mat-list-item>
                 </mat-list>
+
+                <img src="../../../../../assets/register/enviarinfo.png" style="width: 70%; margin-top: 15px;" routerLink="/">
             </div>
         </div>
-
-
-
     </div>
 </div>
